first clear version

--- a/abstractEN.tex
+++ b/abstractEN.tex
@@ -1,7 +1,7 @@
 \begin{abstractEN}
 
-This paper proposes a music recommendation approach based on various similarity
-information via Factorization Machine (FM).  ...
+%This paper proposes a music recommendation approach based on various similarity
+%information via Factorization Machine (FM).  ...
 
 \end{abstractEN}
 
