--- a/utaipeivars.tex
+++ b/utaipeivars.tex
@@ -31,13 +31,13 @@
 % }}}
 
 % {{{
-\titleCH{中文財務情緒字典建構與其在財務新聞分析之應用}
-\titleEN{On the Constructure and analysis of chinese financial sentiment lexciconon for Financial News}
-\authorCH{張津挺}
-\studentID{10116006}
-\authorEN{Chin-Ting Chang}
-\advisorCH{王釧茹}
-\advisorEN{Chuang-Ju Wang}
+\titleCH{中文題目}
+\titleEN{English Title}
+\authorCH{中文姓名}
+\studentID{學號}
+\authorEN{English Name}
+\advisorCH{中文姓名}
+\advisorEN{Advisor Name}
 \yearCH{一百零三}
 \yearEN{103}
 \monthCH{四}
