--- a/abstractCH.tex
+++ b/abstractCH.tex
@@ -1,9 +1,7 @@
 \begin{abstractCH}
-%\begin{document}
 
 \setlength{\baselineskip}{1.5em}
-本論文提出了一種音樂推薦方法基於結合各種相似度資訊
-於分解機器（Factorization Machine）模型中。
-...
+%本論文提出了一種音樂推薦方法基於結合各種相似度資訊
+%於分解機器（Factorization Machine）模型中。
+
 \end{abstractCH}
-%\end{document}
